fix: editor maximized z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,15 +163,6 @@ input[type=radio] {
   cursor: pointer;
 }
 
-.fmtp_theme_wrapper {
-  display: inline-block;
-  width: 19%;
-}
-
-.fmtp_theme_screenshot {
-  max-width: 100px;
-}
-
 .file-manager-shortcode-table {
   margin: 10px;
   padding: 10px;
@@ -321,34 +312,16 @@ input[type=radio] {
   display: block;
 }
 
-.fm-donation {
-  text-align: center;
-  margin: 10px;
-}
-
-.fm-donation > form {
-  padding-bottom: 20px;
-}
-
-.fm-donation > p {
-  text-align: justify;
-}
-
-.fm-donation > h2 {
-  color: #0073AA;
-  padding-top: 20px;
-}
-
-.ui-widget {
-  z-index: 10000;
-}
-
 .ui-widget textarea {
   font-family: Verdana,Arial,sans-serif,Trebuchet MS,Tahoma;
   font-size: 1.3em;
   background-color: #f0f0f0;
   padding: 10px;
   text-align: left;
+}
+
+.ui-front.elfinder-maximized {
+  z-index: 10000 !important;
 }
 
 .ui-dialog:nth-child(7) {
@@ -419,37 +392,9 @@ input[type=radio] {
   height: 81% !important;
 }
 
-.sudo-permission-system .col-main {
-  width: 100%;
-}
-
-.sudo-permission-system .col-main .gb-fm-row img {
-  width: 100%;
-}
-
-.sudo-permission-system .col-main .fmp-demo-notice {
-  width: 98%;
-  padding-left: 5px;
-  text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.sudo-permission-system .col-main .fmp-demo-notice button {
-  padding: 15px;
-  border-radius: 0px;
-  color: white;
-  background-color: #1CB841;
-  font-weight: bold;
-  border: 0px;
-}
-
-.sudo-permission-system .col-main .fmp-demo-notice button:hover {
-  color: #1CB841;
-  padding: 14px;
-  background-color: #F1F1F1;
-  border: 1px solid #1CB841;
-  cursor: pointer;
+.elfinder-dialog-error .ui-dialog-content, .elfinder-dialog-confirm .ui-dialog-content {
+  padding-left: 56px;
+  min-height: 35px;
 }
 
 .review-block {
