--- a/sass/parts/elfinder.sass
+++ b/sass/parts/elfinder.sass
@@ -6,7 +6,8 @@
         background-color: #f0f0f0
         padding: 10px
         text-align: left
-    z-index: 10000
+.ui-front.elfinder-maximized
+    z-index: 10000 !important
 
 .ui-dialog
     &:nth-child(7)
